[tool.poetry]
name = "sbt-contracts"
version = "0.2.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
maturin = "^1.3.1"
cryo-python = "^0.2.0"
notebook = "^7.0.6"
polars = "^0.19.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
