[tool.poetry]
name = "sbt-contracts"
version = "0.2.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
notebook = "^7.0.6"
pandas = "^2.1.3"
ipykernel = "^6.26.0"
web3 = "^6.11.3"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
